커밋테스트

--- a/muapp/templates/index.html
+++ b/muapp/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="en">
-
+{% comment %} 잉잉잉꾸 {% endcomment %}
 <head>
     <meta charset="utf-8">
     <title>Foody - Organic Food Website Template</title>
