--- a/muapp/templates/product.html
+++ b/muapp/templates/product.html
@@ -1,100 +1,130 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
+{% load static %}
+{% block nav %}
+    <a href="/" class="nav-item nav-link">Home</a>
+    <a href="/about/" class="nav-item nav-link">About Us</a>
+    <a href="/product/" class="nav-item nav-link active">Products</a>
+{% endblock %}
+{% block jsv %}
+<script>
+    ( /* att_zone : 이미지들이 들어갈 위치 id, btn : file tag id */
+      imageView = function imageView(att_zone, btn){
+    
+        var attZone = document.getElementById(att_zone);
+        var btnAtt = document.getElementById(btn)
+        var sel_files = [];
+        
+        // 이미지와 체크 박스를 감싸고 있는 div 속성
+        var div_style = 'display:block;position:relative;'
+                      + 'margin:5px;border:1px solid #fff;z-index:1';
+        // 미리보기 이미지 속성
+        var img_style = 'width:30%;height:auto;z-index:none;visibilty:visible;animation-delay:0.1s;animation-name:fadeInup;vertical-align: middle;'
+        // 이미지안에 표시되는 체크박스의 속성
+        var chk_style = 'width:30px;height:30px;position:absolute;font-size:24px;'
+                      + 'bottom:0px;z-index:999;background-color:white;color:#f00';
+      
+        btnAtt.onchange = function(e){
+          var files = e.target.files;
+          var fileArr = Array.prototype.slice.call(files)
+          for(f of fileArr){
+            imageLoader(f);
+          }
+        }  
+        
+      
+        // 탐색기에서 드래그앤 드롭 사용
+        attZone.addEventListener('dragenter', function(e){
+          e.preventDefault();
+          e.stopPropagation();
+        }, false)
+        
+        attZone.addEventListener('dragover', function(e){
+          e.preventDefault();
+          e.stopPropagation();
+          
+        }, false)
+      
+        attZone.addEventListener('drop', function(e){
+          var files = {};
+          e.preventDefault();
+          e.stopPropagation();
+          var dt = e.dataTransfer;
+          files = dt.files;
+          for(f of files){
+            imageLoader(f);
+          }
+          
+        }, false)
+        
+    
+        
+        /*첨부된 이미리들을 배열에 넣고 미리보기 */
+        imageLoader = function(file){
+          sel_files.push(file);
+          var reader = new FileReader();
+          reader.onload = function(ee){
+            let img = document.createElement('img')
+            img.setAttribute('style', img_style)
+            img.src = ee.target.result;
+            attZone.appendChild(makeDiv(img, file));
+          }
+          
+          reader.readAsDataURL(file);
+        }
+        
+        /*첨부된 파일이 있는 경우 checkbox와 함께 attZone에 추가할 div를 만들어 반환 */
+        makeDiv = function(img, file){
+          var div = document.createElement('div')
+          div.setAttribute('style', div_style)
+          
+          var btn = document.createElement('input')
+          btn.setAttribute('type', 'button')
+          btn.setAttribute('value', 'x')
+          btn.setAttribute('delFile', file.name);
+          btn.setAttribute('style', chk_style);
+          btn.onclick = function(ev){
+            var ele = ev.srcElement;
+            var delFile = ele.getAttribute('delFile');
+            for(var i=0 ;i<sel_files.length; i++){
+              if(delFile== sel_files[i].name){
+                sel_files.splice(i, 1);      
+              }
+            }
+            
+            dt = new DataTransfer();
+            for(f in sel_files) {
+              var file = sel_files[f];
+              dt.items.add(file);
+            }
+            btnAtt.files = dt.files;
+            var p = ele.parentNode;
+            attZone.removeChild(p)
+          }
+          div.appendChild(img)
+          div.appendChild(btn)
+          return div
+        }
+      }
+    )('att_zone', 'btnAtt')
+    
+</script>
+<script>
+    $(document).ready(function() {
+        $("#chk_submit").on('click', function(){
+            var chk_arr = [];
 
-<head>
-    <meta charset="utf-8">
-    <title>Foody - Organic Food Website Template</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+            $("input[name=nb[]]:checked").each(function(){
+                chk_arr.push($(this).val());
+            
+            });
 
-    <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+            alert(chk_arr);
+        });
 
-    <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500&family=Lora:wght@600;700&display=swap" rel="stylesheet"> 
-
-    <!-- Icon Font Stylesheet -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
-
-    <!-- Libraries Stylesheet -->
-    <link href="lib/animate/animate.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-
-    <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
-</head>
-
-<body>
-    <!-- Spinner Start -->
-    <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
-        <div class="spinner-border text-primary" role="status"></div>
-    </div>
-    <!-- Spinner End -->
-
-
-    <!-- Navbar Start -->
-    <div class="container-fluid fixed-top px-0 wow fadeIn" data-wow-delay="0.1s">
-        <div class="top-bar row gx-0 align-items-center d-none d-lg-flex">
-            <div class="col-lg-6 px-5 text-start">
-                <small><i class="fa fa-map-marker-alt me-2"></i>123 Street, New York, USA</small>
-                <small class="ms-4"><i class="fa fa-envelope me-2"></i>info@example.com</small>
-            </div>
-            <div class="col-lg-6 px-5 text-end">
-                <small>Follow us:</small>
-                <a class="text-body ms-3" href=""><i class="fab fa-facebook-f"></i></a>
-                <a class="text-body ms-3" href=""><i class="fab fa-twitter"></i></a>
-                <a class="text-body ms-3" href=""><i class="fab fa-linkedin-in"></i></a>
-                <a class="text-body ms-3" href=""><i class="fab fa-instagram"></i></a>
-            </div>
-        </div>
-
-        <nav class="navbar navbar-expand-lg navbar-light py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
-            <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-                <h1 class="fw-bold text-primary m-0">F<span class="text-secondary">oo</span>dy</h1>
-            </a>
-            <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <div class="navbar-nav ms-auto p-4 p-lg-0">
-                    <a href="index.html" class="nav-item nav-link">Home</a>
-                    <a href="about.html" class="nav-item nav-link">About Us</a>
-                    <a href="product.html" class="nav-item nav-link active">Products</a>
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                        <div class="dropdown-menu m-0">
-                            <a href="blog.html" class="dropdown-item">Blog Grid</a>
-                            <a href="feature.html" class="dropdown-item">Our Features</a>
-                            <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                            <a href="404.html" class="dropdown-item">404 Page</a>
-                        </div>
-                    </div>
-                    <a href="contact.html" class="nav-item nav-link">Contact Us</a>
-                </div>
-                <div class="d-none d-lg-flex ms-2">
-                    <a class="btn-sm-square bg-white rounded-circle ms-3" href="">
-                        <small class="fa fa-search text-body"></small>
-                    </a>
-                    <a class="btn-sm-square bg-white rounded-circle ms-3" href="">
-                        <small class="fa fa-user text-body"></small>
-                    </a>
-                    <a class="btn-sm-square bg-white rounded-circle ms-3" href="">
-                        <small class="fa fa-shopping-bag text-body"></small>
-                    </a>
-                </div>
-            </div>
-        </nav>
-    </div>
-    <!-- Navbar End -->
-
-
+    })(jQuery);
+</script>
+{% endblock jsv %}
+{% block content %}
     <!-- Page Header Start -->
     <div class="container-fluid page-header mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container">
@@ -586,209 +616,4 @@
         </div>
     </div>
     <!-- Product End -->
-
-
-    <!-- Firm Visit Start -->
-    <!-- Firm Visit End -->
-
-
-    <!-- Testimonial Start -->
-    <!-- Testimonial End -->
-
-
-    <!-- Footer Start -->
-    <div class="container-fluid bg-dark footer pt-5 wow fadeIn" data-wow-delay="0.1s">
-        <div class="container py-5">
-            <div class="row g-5">
-                <div class="col-lg-3 col-md-6">
-                    <h1 class="fw-bold text-primary mb-4">F<span class="text-secondary">oo</span>dy</h1>
-                    <p>Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita</p>
-                    <div class="d-flex pt-2">
-                        <a class="btn btn-square btn-outline-light rounded-circle me-1" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-square btn-outline-light rounded-circle me-1" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square btn-outline-light rounded-circle me-1" href=""><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-square btn-outline-light rounded-circle me-0" href=""><i class="fab fa-linkedin-in"></i></a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-light mb-4">Address</h4>
-                    <p><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-light mb-4">Quick Links</h4>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
-                    <a class="btn btn-link" href="">Terms & Condition</a>
-                    <a class="btn btn-link" href="">Support</a>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-light mb-4">Newsletter</h4>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
-                    <div class="position-relative mx-auto" style="max-width: 400px;">
-                        <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container-fluid copyright">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a href="#">Your Site Name</a>, All Right Reserved.
-                    </div>
-                    <div class="col-md-6 text-center text-md-end">
-                        <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                        Designed By <a href="https://htmlcodex.com">HTML Codex</a>
-                        <br>Distributed By: <a href="https://themewagon.com" target="_blank">ThemeWagon</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Footer End -->
-
-
-    <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a>
-
-
-    <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/wow/wow.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script type="text/javascript" src="/js/bootstrap.js"></script>
-
-    <!-- Template Javascript -->
-    <script src="js/main.js"></script>
-
-    <script>
-        ( /* att_zone : 이미지들이 들어갈 위치 id, btn : file tag id */
-          imageView = function imageView(att_zone, btn){
-        
-            var attZone = document.getElementById(att_zone);
-            var btnAtt = document.getElementById(btn)
-            var sel_files = [];
-            
-            // 이미지와 체크 박스를 감싸고 있는 div 속성
-            var div_style = 'display:block;position:relative;'
-                          + 'margin:5px;border:1px solid #fff;z-index:1';
-            // 미리보기 이미지 속성
-            var img_style = 'width:30%;height:auto;z-index:none;visibilty:visible;animation-delay:0.1s;animation-name:fadeInup;vertical-align: middle;'
-            // 이미지안에 표시되는 체크박스의 속성
-            var chk_style = 'width:30px;height:30px;position:absolute;font-size:24px;'
-                          + 'bottom:0px;z-index:999;background-color:white;color:#f00';
-          
-            btnAtt.onchange = function(e){
-              var files = e.target.files;
-              var fileArr = Array.prototype.slice.call(files)
-              for(f of fileArr){
-                imageLoader(f);
-              }
-            }  
-            
-          
-            // 탐색기에서 드래그앤 드롭 사용
-            attZone.addEventListener('dragenter', function(e){
-              e.preventDefault();
-              e.stopPropagation();
-            }, false)
-            
-            attZone.addEventListener('dragover', function(e){
-              e.preventDefault();
-              e.stopPropagation();
-              
-            }, false)
-          
-            attZone.addEventListener('drop', function(e){
-              var files = {};
-              e.preventDefault();
-              e.stopPropagation();
-              var dt = e.dataTransfer;
-              files = dt.files;
-              for(f of files){
-                imageLoader(f);
-              }
-              
-            }, false)
-            
-        
-            
-            /*첨부된 이미리들을 배열에 넣고 미리보기 */
-            imageLoader = function(file){
-              sel_files.push(file);
-              var reader = new FileReader();
-              reader.onload = function(ee){
-                let img = document.createElement('img')
-                img.setAttribute('style', img_style)
-                img.src = ee.target.result;
-                attZone.appendChild(makeDiv(img, file));
-              }
-              
-              reader.readAsDataURL(file);
-            }
-            
-            /*첨부된 파일이 있는 경우 checkbox와 함께 attZone에 추가할 div를 만들어 반환 */
-            makeDiv = function(img, file){
-              var div = document.createElement('div')
-              div.setAttribute('style', div_style)
-              
-              var btn = document.createElement('input')
-              btn.setAttribute('type', 'button')
-              btn.setAttribute('value', 'x')
-              btn.setAttribute('delFile', file.name);
-              btn.setAttribute('style', chk_style);
-              btn.onclick = function(ev){
-                var ele = ev.srcElement;
-                var delFile = ele.getAttribute('delFile');
-                for(var i=0 ;i<sel_files.length; i++){
-                  if(delFile== sel_files[i].name){
-                    sel_files.splice(i, 1);      
-                  }
-                }
-                
-                dt = new DataTransfer();
-                for(f in sel_files) {
-                  var file = sel_files[f];
-                  dt.items.add(file);
-                }
-                btnAtt.files = dt.files;
-                var p = ele.parentNode;
-                attZone.removeChild(p)
-              }
-              div.appendChild(img)
-              div.appendChild(btn)
-              return div
-            }
-          }
-        )('att_zone', 'btnAtt')
-        
-    </script>
-    <script>
-        $(document).ready(function() {
-            $("#chk_submit").on('click', function(){
-                var chk_arr = [];
-
-                $("input[name=nb[]]:checked").each(function(){
-                    chk_arr.push($(this).val());
-                
-                });
-
-                alert(chk_arr);
-            });
-
-        })(jQuery);
-    </script>
-
-    
-</body>
-
-</html>
+{% endblock  %}
