view 오류 제거 및 간단한 수정

--- a/muapp/templates/blog.html
+++ b/muapp/templates/blog.html
@@ -15,7 +15,7 @@
             <h1 class="display-3 mb-3 animated slideInDown">Blog Grid</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb mb-0">
-                    <li class="breadcrumb-item"><a class="text-body" href="#">ㅋㅋ</a></li>
+                    <li class="breadcrumb-item"><a class="text-body" href="#">Home</a></li>
                     <li class="breadcrumb-item"><a class="text-body" href="#">Pages</a></li>
                     <li class="breadcrumb-item text-dark active" aria-current="page">Blog Grid</li>
                 </ol>
