--- a/static/scss/bootstrap.scss
+++ b/static/scss/bootstrap.scss
@@ -1,7 +1,7 @@
 /******* Customized Bootstrap ********/
 
-$primary: #3CB815;
-$secondary: #F65005;
+$primary: #1aabf4;
+$secondary: #05b70e;
 $light: #F7F8FC;
 $dark: #111111;
 
