--- a/muapp/templates/index.html
+++ b/muapp/templates/index.html
@@ -40,28 +40,16 @@
     
             <div class="card" style="color: #4B515D; border-radius: 35px;">
             <div class="card-body p-4">
+    
                 <div class="d-flex">
-                    <h6 class="flex-grow-1" id="LocationNow">{{location}}</h6> 
-                    <h6 id="TodayDate">{{date}}</h6>
+                <h6 class="flex-grow-1" id="LocationNow">경기도 화성시</h6> 
+                <h6 id="TodayDate">15:07</h6>
                 </div>
+    
                 <div class="d-flex flex-column text-center mt-5 mb-4">
-                    <h6 id="Temperature" class="display-4 mb-0 font-weight-bold" style="color: #1C2331;">{{curTmp}}º</h6>
-                    {% if alertRain != 0 %} <!-- 비 오면 "오늘은 비/눈 소식이 있습니다."라고 뜨고 아니면 아예 안 뜸. -->
-                    <span id="AlertRain" class="small" style="color: #868B94">{{alertRain}}</span>
-                    {% endif %}
+                <h6 id="Temperature" class="display-4 mb-0 font-weight-bold" style="color: #1C2331;"></h6>
+                <span id="WeatherStatus" class="small" style="color: #868B94">Stormy</span>
                 </div>
-                <div class="align-items-center">
-                    <div class="d-flex">
-                        <h6 id="humidity" class="row align-items-end justify-content-around" style="color: #1C2331"><i class="fa-solid fa-droplet"></i>습도 : {{humidity}}%</h6>
-                        <h6 class="flex-grow-1" id="weatherIcon"><i class="{{icon}} row justify-content-end" style="color: #868B94; font-size: 6rem;"></i></h6>
-                    </div>
-                    <div class="d-flex ">
-                        <h6 id="TemperatureMaxMin" class="small flex-grow-1" style="color: #1C2331;">최고 {{minTmp}}º / 최저 {{maxTmp}}º</h6>
-                        <h6 id="WeatherStatus" class="small" style="color: #1C2331;">{{sky}}</h6>
-                    </div>
-                </div>
-
-
             </div>
             </div>
     
@@ -72,7 +60,10 @@
     <!-- 날씨 및 위치 표시 템플릿 End -->
 
     
-
+    <!-- 날씨 정보 web에 띄우기 Start-->
+    
+    
+    <!-- 날씨 정보 web에 띄우기 End -->
 
 
     <!-- Feature Start -->
