--- a/muapp/templates/feature.html
+++ b/muapp/templates/feature.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block nav %}
+{% endblock%}
+
 {% block content %}
     <!-- Page Header Start -->
     <div class="container-fluid page-header wow fadeIn" data-wow-delay="0.1s">
