--- a/muapp/templates/base.html
+++ b/muapp/templates/base.html
@@ -52,17 +52,21 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto p-4 p-lg-0">
+                    <a href="{% url 'index' %}" class="nav-item nav-link active">Home</a>
+                    <a href="{% url 'about' %}" class="nav-item nav-link">About Us</a>
+                    <a href="{% url 'index' %}" class="nav-item nav-link">Try on</a>
                     {% block nav %}
-                    
+                        
                     {% endblock %}
                     <div class="nav-item dropdown">
                         {% block closet %}
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Closet</a>
+                        
                         {% endblock closet %}
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Clothes</a>
                         <div class="dropdown-menu m-0">
-                            <a href="{% url 'blog' %}" class="dropdown-item">My clothes</a>
-                            <a href="/" class="dropdown-item">Try on</a>
-                            <!-- cf. 사용 안할 것 같은 것들 임시로 지워둠 -->
+                            <a href="{% url 'product' %}" class="dropdown-item">My closet</a>
+                            <a href="{% url 'blog' %}" class="dropdown-item">Codi book</a>
+                            <!-- dropdown 메뉴바 -->
                             <!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                             <a href="404.html" class="dropdown-item">404 Page</a> -->
                         </div>
