--- a/muapp/templates/about.html
+++ b/muapp/templates/about.html
@@ -1,8 +1,13 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block nav %}
-
+    <a href="{% url 'index' %}" class="nav-item nav-link">Home</a>
+    <a href="{% url 'about' %}" class="nav-item nav-link active">About Us</a>
+    <a href="{% url 'index' %}" class="nav-item nav-link">Try on</a>
 {% endblock %}
+{% block closet %}
+    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Clothes</a>
+{% endblock closet %}
 {% block content %}
 
 
