--- a/muapp/templates/blog.html
+++ b/muapp/templates/blog.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block nav %}
-
+    <a href="{% url 'index' %}" class="nav-item nav-link">Home</a>
+    <a href="{% url 'about' %}" class="nav-item nav-link">About Us</a>
+    <a href="{% url 'index' %}" class="nav-item nav-link">Try on</a>
 {% endblock %}
 {% block closet %}
-    
+    <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Clothes</a>
 {% endblock closet %}
 {% block content %}
     <!-- Page Header Start -->
