--- a/muapp/templates/index.html
+++ b/muapp/templates/index.html
@@ -1,9 +1,13 @@
 {% extends 'base.html' %}
 {% load static %}
-<<<<<<< Updated upstream
 {% block nav %}
-    
+    <a href="{% url 'index' %}" class="nav-item nav-link active">Home</a>
+    <a href="{% url 'about' %}" class="nav-item nav-link">About Us</a>
+    <a href="{% url 'index' %}" class="nav-item nav-link">Try on</a>
 {% endblock %}
+{% block closet %}
+    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Clothes</a>
+{% endblock closet %}
 {% block content %}
     <!-- 배너 -->
     <!-- Carousel Start -->
