💦디자인 수정

--- a/muapp/templates/base.html
+++ b/muapp/templates/base.html
@@ -63,8 +63,8 @@
                         {% endblock closet %}
                         
                         <div class="dropdown-menu m-0">
-                            <a href="{% url 'product' %}" class="dropdown-item">My closet</a>
-                            <a href="{% url 'blog' %}" class="dropdown-item">Codi book</a>
+                            <a href="{% url 'product' %}" class="dropdown-item jamsil">My closet</a>
+                            <a href="{% url 'blog' %}" class="dropdown-item jamsil">Codi book</a>
                             <!-- dropdown 메뉴바 -->
                             <!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                             <a href="404.html" class="dropdown-item">404 Page</a> -->
@@ -80,11 +80,11 @@
                     <a class="btn-sm-square bg-white rounded-circle ms-3" href="login">
                         <small class="fa fa-user text-body"></small>
                     </a>
-                    <a href="{% url 'blog' %}" class="btn-sm-square bg-white rounded-circle ms-3">
+                    {% comment %} <a href="{% url 'blog' %}" class="btn-sm-square bg-white rounded-circle ms-3">
                         <small class="fa fa-anchor text-body"></small>
                     </a>
                     <a class="btn-sm-square bg-white rounded-circle ms-3" href="">
-                        <small class="fa fa-shopping-bag text-body"></small>
+                        <small class="fa fa-shopping-bag text-body"></small> {% endcomment %}
                     </a>
                 </div>
             </div>
@@ -95,36 +95,34 @@
 
     {% endblock %}
     <!-- Footer Start -->
-    <div class="container-fluid bg-dark footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid bg-dark footer mt-0 pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
-                    <h1 class="fw-bold mb-1" style="color: #0b83f7; font-size: 40px">C<span class="fs-1" style="color: #6fa8dc;">lo<span class="fs-3">th</span></span><span class="fs-4" style="color: #8fce00;">ify</span></h1>
+                    <h1 class="fw-bold mb-1 jamsil" style="color: #0b83f7; text-shadow: -1px 0px black, 0px 1px black, 1px 0px black, 0px -1px black;">C<span class="fs-1" style="color: #6fa8dc;">lo<span class="fs-3">th</span></span><span class="fs-4" style="color: #8fce00;">ify</span></h1>
                     <p class="jamsil">옷을 손쉽게 관리한다는 뜻으로, "Cloth"와 "Simplify"의 합성어입니다.</p>
-                    <div class="d-flex pt-2">
+                    {% comment %} <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-light rounded-circle me-1" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-outline-light rounded-circle me-1" href=""><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-square btn-outline-light rounded-circle me-1" href=""><i class="fab fa-youtube"></i></a>
                         <a class="btn btn-square btn-outline-light rounded-circle me-0" href=""><i class="fab fa-linkedin-in"></i></a>
-                    </div>
+                    </div> {% endcomment %}
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-light mb-4">Address</h4>
-                    <p><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <h4 class="text-light mb-4 jamsil">정보</h4>
+                    <p class="hahmelt"><i class="fa fa-user me-3"></i>협성대학교 졸업작품</p>
+                    {% comment %} <p><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p> {% endcomment %}
+                    <p class="hahmelt"><i class="fa fa-envelope me-3"></i>sg851033@gmail.com</p>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-light mb-4">Quick Links</h4>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
-                    <a class="btn btn-link" href="">Terms & Condition</a>
-                    <a class="btn btn-link" href="">Support</a>
+                    <h4 class="text-light mb-4 jamsil">바로가기</h4>
+                    <a class="btn btn-link hahmelt" href="">가상 피팅</a>
+                    <a class="btn btn-link hahmelt" href="">옷장 관리</a>
+                    <a class="btn btn-link hahmelt" href="">코디 추천</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-light mb-4">Newsletter</h4>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+                    <h4 class="text-light mb-4 jamsil">알림받기</h4>
+                    <p class="hahmelt">새로운 기능이 업데이트되면 알려줍니다!</p>
                     <div class="position-relative mx-auto" style="max-width: 400px;">
                         <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
                         <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
